# rustcode

./: .env  CHANGELOG.md  CHANGES.md  Cargo.toml  README.md  TODO.md
.github/: release.yml
.github/workflows/: build.yml
.rustcode/skills/release-automation/: SKILL.md
artifacts/: summary.md
docs/: harness-recap.md  refactor-network-prompt.md
scripts/: release.sh
src/: app.rs  cli.rs  clipboard.rs  config.rs  context.rs  logger.rs  main.rs  mcp.rs  network.rs  notifications.rs  raw_cli.rs  remote_server.rs  skills.rs  symbols.rs  tools.rs  ui.rs
src/app/: actions.rs  mod.rs  quota.rs  state.rs  suggestion.rs
src/network/: compaction.rs  helpers.rs  loop_detect.rs  messages.rs  retry.rs
src/tools/: exec.rs  filesystem.rs  misc.rs  mod.rs  search.rs
src/ui/: mod.rs  theme.rs
web/: index.html
