[package]
name = "rustcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustcode"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.8.19"
