[package]
name = "rustcode"
version = "0.1.8"
edition = "2024"

[[bin]]
name = "rustcode"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
globset = "0.4"
ignore = "0.4"
rand = "0.10.2"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
regex = "1"
reqwest = { version = "0.13.4", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = { version = "3.1.1", features = ["inline"] }
streaming-iterator = "0.1.9"
sysinfo = "0.39.6"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.8.19"
tree-sitter = "0.24.4"
tree-sitter-rust = "0.23.2"
unicode-width = "0.2.2"
urlencoding = "2.1.3"
